[FEATURE] filtrado  de preguntas ya respondidas